--- a/src/styles/components/modal.css
+++ b/src/styles/components/modal.css
@@ -20,6 +20,7 @@
 
 .modal-content {
     width: 50%;
+    max-width: 800px;
     background-color: var(--white);
     min-width: 320px;
     padding: 20px;
@@ -29,4 +30,16 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+@media (max-width: 1280px) {
+    .modal-content {
+        width: 80%;
+    }
+}
+
+@media (max-width: 768px) {
+    .modal-content {
+        width: 90%;
+    }
 }
