--- a/src/styles/views/task-list.css
+++ b/src/styles/views/task-list.css
@@ -12,6 +12,7 @@
     width: 100%;
     border-bottom: 1px solid var(--grey);
     padding-block: 10px;
+    padding-right: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
