--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -4,6 +4,8 @@
     --orange: #ed4d24;
     --light-orange: #ea8872;
     --grey: #e5e5e5;
+    --light-grey: #b7b6b6;
+    --dark-grey: #696969;
     --scrollbar: #d3dae3;
     --error: #a90808;
 }
