--- a/src/styles/components/modal.css
+++ b/src/styles/components/modal.css
@@ -1,4 +1,4 @@
-.modal-wrapper {
+.modal__wrapper {
     position: fixed;
     width: 0;
     height: 0;
@@ -11,35 +11,37 @@
     transition: all .15s ease-in-out;
 }
 
-.modal-wrapper-visible {
+.modal__wrapper--visible {
     width: 100%;
     height: 100vh;
     opacity: 1;
     pointer-events: all;
 }
 
-.modal-content {
+.modal__content {
     width: 50%;
     max-width: 800px;
     background-color: var(--white);
     min-width: 320px;
-    padding: 20px;
+    max-height: 90%;
+    overflow-y: auto;
 }
 
-.modal-header {
+.modal__header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 20px 20px 10px;
 }
 
 @media (max-width: 1280px) {
-    .modal-content {
+    .modal__content {
         width: 80%;
     }
 }
 
 @media (max-width: 768px) {
-    .modal-content {
+    .modal__content {
         width: 90%;
     }
 }
