--- a/src/styles/components/select.css
+++ b/src/styles/components/select.css
@@ -1,3 +1,7 @@
+.select-wrapper {
+    z-index: 2;
+}
+
 .v-select {
     padding-inline: 0;
 }
@@ -31,6 +35,7 @@
 
 .vs__dropdown-menu {
     padding-top: 5px;
+    background: var(--white);
 }
 
 .vs__dropdown-menu li {
@@ -41,4 +46,9 @@
 .vs__dropdown-menu li:hover {
     background-color: var(--light-orange);
     color: var(--white);
+}
+
+.vs__dropdown-option--selected {
+    color: var(--white);
+    background-color: var(--orange);
 }
