--- a/src/styles/components/loader.css
+++ b/src/styles/components/loader.css
@@ -7,17 +7,66 @@
     min-width: 150px;
     min-height: 150px;
 }
+/*.loader {*/
+/*    width: 20px;*/
+/*    height: 20px;*/
+/*    border-radius: 50%;*/
+/*    background: var(--orange);*/
+/*    box-shadow: 0 0 0 0 var(--light-orange);*/
+/*    animation: loader 1s infinite ease-in-out;*/
+/*}*/
+
+/*@keyframes loader {*/
+/*    100% {*/
+/*        box-shadow: 0 0 0 30px #0000*/
+/*    }*/
+/*}*/
+
 .loader {
-    width: 20px;
-    height: 20px;
     border-radius: 50%;
-    background: var(--orange);
-    box-shadow: 0 0 0 0 var(--light-orange);
-    animation: loader 1s infinite ease-in-out;
+    width: 10em;
+    height: 10em;
+    --spinner-border: 1.1em solid rgba(234, 136, 114, 0.2);
+    font-size: 10px;
+    position: relative;
+    border-top: var(--spinner-border);
+    border-right: var(--spinner-border);
+    border-bottom: var(--spinner-border);
+    border-left: 1.1em solid var(--orange);
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: spin 1.1s infinite linear;
+    animation: spin 1.1s infinite linear;
 }
 
-@keyframes loader {
+.loader--small {
+    width: 20px;
+    height: 20px;
+    --spinner-border: 3px solid rgba(234, 136, 114, 0.2);
+    border-top: var(--spinner-border);
+    border-right: var(--spinner-border);
+    border-bottom: var(--spinner-border);
+    border-left: 3px solid var(--orange);
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
     100% {
-        box-shadow: 0 0 0 30px #0000
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
