--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,7 @@
 :root {
     --main-background: #f0f0f0;
     --white: #fff;
+    --black: #000;
     --orange: #ed4d24;
     --light-orange: #ea8872;
     --grey: #e5e5e5;
