--- a/src/styles/views/task-list.css
+++ b/src/styles/views/task-list.css
@@ -19,6 +19,34 @@
     gap: 10px;
 }
 
-.task-list-element-title {
+.task-list-element__title {
     flex: 1;
+}
+
+.task-list-element__header-actions {
+    width: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.task-list-element__checkbox {
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.task-list-element__date {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 100px;
+    margin-right: 15px;
+}
+
+.task-list-element__date-icon {
+    height: 16px;
+    width: 16px;
 }
