--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -3,6 +3,7 @@
     --white: #fff;
     --black: #000;
     --orange: #ed4d24;
+    --green: #3ea908;
     --light-orange: #ea8872;
     --grey: #e5e5e5;
     --light-grey: #b7b6b6;
