--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -51,6 +51,7 @@
   height: 20px;
   transition: all .15s ease-in-out;
   cursor: pointer;
+  background-color: var(--white);
 }
 
 .checkbox--has-value {
@@ -62,6 +63,7 @@
   height: 10px;
   width: 10px;
   transition: all .15s ease-in-out;
+  opacity: 0;
 }
 
 .checkbox__icon--has-value {
